start html schedule

--- a/full_schedule.html
+++ b/full_schedule.html
@@ -1,41 +1,41 @@
-# Community of Practice Schedule
-
-## [1 Introduction](Prompts/1_Introduction)
+<h> Detailed Community of Practice Schedule </h>
+    <br>
+    <br>
+<table> <tbody>
+    <tr>
+      <th>Topic</th>
+      <th>Activity</th>
+      <th>Social Warm-Up</th>
+      <th>Discussion</th>
+      <th>Extra</th>
+    </tr>
+<tr><td> 1_Introduction </td></tr>
 - [1 Welcome](Prompts/1_Introduction/1_Welcome)
 
-
-## [2 Data Use Best Practices](Prompts/2_Data_Use_Best_Practices)
+<tr><td> 2_Data_Use_Best_Practices </td></tr>
 - [1 FAIR Data](Prompts/2_Data_Use_Best_Practices/1_FAIR_Data)
 - [2 Reproducibility](Prompts/2_Data_Use_Best_Practices/2_Reproducibility)
 - [3 NIH Data Sharing Rules](Prompts/2_Data_Use_Best_Practices/3_NIH_Data_Sharing_Rules)
 
-
-## [3 Learning to Learn](Prompts/3_Learning_to_Learn)
+<tr><td> 3_Learning_to_Learn </td></tr>
 - [1 Getting Help](Prompts/3_Learning_to_Learn/1_Getting_Help)
 - [2 Getting Stuck](Prompts/3_Learning_to_Learn/2_Getting_Stuck)
 - [3 Getting Unstuck](Prompts/3_Learning_to_Learn/3_Getting_Unstuck)
 - [4 Processing Learning](Prompts/3_Learning_to_Learn/4_Processing_Learning)
 
-
-## [4 Version Control](Prompts/4_Version_Control)
+<tr><td> 4_Version_Control </td></tr>
 - [1 Problem of Version Control](Prompts/4_Version_Control/1_Problem_of_Version_Control)
 - [2 Introduction to GitHub](Prompts/4_Version_Control/2_Introduction_to_GitHub)
 - [3 Open Source Projects](Prompts/4_Version_Control/3_Open_Source_Projects)
 
-
-## [5 Working with Data](Prompts/5_Working_with_Data)
+<tr><td> 5_Working_with_Data </td></tr>
 - [1 Locating Public Data](Prompts/5_Working_with_Data/1_Locating_Public_Data)
 - [2 Exploring Data](Prompts/5_Working_with_Data/2_Exploring_Data)
 - [3 Visualizing Data](Prompts/5_Working_with_Data/3_Visualizing_Data)
 
-
-## [6 Wrapping Up](Prompts/6_Wrapping_Up)
+<tr><td> 6_Wrapping_Up </td></tr>
 - [1 Reflecting on DART](Prompts/6_Wrapping_Up/1_Reflecting_on_DART)
 - [2 Beyond DART](Prompts/6_Wrapping_Up/2_Beyond_DART)
 
-
-
-
-
-
-
+</tbody>
+</table>
